# bootcamp_python_2

./: .flake8  .pre-commit-config.yaml  README.md  mercadolivre.py  pyproject.toml
data/: data_saida.csv  data_saida.parquet
src/: decorador_inutil.py  etl.py  log.py  pipeline.py  tenacity_decorator.py  testando_decoradores.py  time_decorator.py
