[project]
name = "bootcamp-python-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Barletta",email = "jonasbarletta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort *py
black *.py
flake8 *.py
"""
